spin Context out of Interpreter

--- a/Intrigue/Intrigue.vbproj
+++ b/Intrigue/Intrigue.vbproj
@@ -62,6 +62,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Context.vb" />
     <Compile Include="Exceptions.vb" />
     <Compile Include="FunctionNodes.vb" />
     <Compile Include="Interpreter.vb" />
