--- a/Intrigue.Tests/Intrigue.Tests.vbproj
+++ b/Intrigue.Tests/Intrigue.Tests.vbproj
@@ -80,11 +80,11 @@
     <Import Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ListFunctionsTest.vb" />
-    <Compile Include="FunctionsTest.vb" />
+    <Compile Include="FuncListTest.vb" />
+    <Compile Include="FuncMainTest.vb" />
+    <Compile Include="FuncNumericTest.vb" />
     <Compile Include="LambdaTest.vb" />
     <Compile Include="DefineTest.vb" />
-    <Compile Include="NumericFunctionsTest.vb" />
     <Compile Include="ParserTest.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
