--- a/Intrigue.nuspec
+++ b/Intrigue.nuspec
@@ -4,7 +4,7 @@
   <metadata>
 
     <id>Intrigue</id>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
 
     <authors>jmettraux</authors>
     <owners>jmettraux</owners>
@@ -18,13 +18,12 @@
     <description>a mini (and naive) Scheme interpreter</description>
 
     <releaseNotes>
-== release 1.0.0    released 2013/01/24
+== release 1.0.1    released 2013/01/28
 
-- extended "less brackets" mode
-- switched to ; for comments (be a good Scheme)
+- introduce libs/ core libraries
     </releaseNotes>
 
-    <copyright>Copyright 2013</copyright>
+    <copyright>2013-2013 John Mettraux jmettraux@gmail.com</copyright>
     <tags>scheme lisp interpreter</tags>
 
     <dependencies>
