--- a/Intrigue.nuspec
+++ b/Intrigue.nuspec
@@ -4,7 +4,7 @@
   <metadata>
 
     <id>Intrigue</id>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
 
     <authors>jmettraux</authors>
     <owners>jmettraux</owners>
@@ -18,12 +18,14 @@
     <description>a mini (and naive) Scheme interpreter</description>
 
     <releaseNotes>
-== release 1.0.2    released 2013/01/29
+== release 1.0.3    released 2013/01/31
 
-- allow for more than one expression in "lambda" body
-- fix "quote"
-- implement "list"
-- implement "make-environment"
+- make #To{Atom|List|Symbol|Function}Node more verbose in case of failure
+- implement Node#ToInteger
+- implement "-"
+- implement "set!"
+- implement "and", "or" and "not"
+- implement "null?"
     </releaseNotes>
 
     <copyright>2013-2013 John Mettraux jmettraux@gmail.com</copyright>
