--- a/Intrigue/Intrigue.vbproj
+++ b/Intrigue/Intrigue.vbproj
@@ -62,13 +62,13 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FuncConversion.vb" />
     <Compile Include="Environment.vb" />
+    <Compile Include="PrimCall.vb" />
+    <Compile Include="PrimConversion.vb" />
+    <Compile Include="PrimList.vb" />
+    <Compile Include="PrimMain.vb" />
+    <Compile Include="PrimNumeric.vb" />
     <Compile Include="Tokenizer.vb" />
-    <Compile Include="FuncCall.vb" />
-    <Compile Include="FuncNumeric.vb" />
-    <Compile Include="FuncList.vb" />
-    <Compile Include="FuncMain.vb" />
     <Compile Include="Exceptions.vb" />
     <Compile Include="Interpreter.vb" />
     <Compile Include="Nodes.vb" />
