--- a/Intrigue/Intrigue.vbproj
+++ b/Intrigue/Intrigue.vbproj
@@ -115,6 +115,9 @@
   <ItemGroup>
     <EmbeddedResource Include="libs\math.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="libs\json.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
